--- a/css/style.css
+++ b/css/style.css
@@ -1342,5 +1342,57 @@ body.offcanvas {
 
 .js .animate-box {
   opacity: 0; }
+
   /*added css*/
+.social-icons li a {
+	  width:28px;
+	  height:32px;
+	  display:inline-block;
+	  line-height:30px;
+	  text-align:center;
+	  /*background: rgba(240, 248, 255, 0.9);*/
+	  font-size:20px;
+	}
+	.social-icons li a i.fa-whatsapp{
+     	color: #0BDA51;
+        animation: bounce 2s ease-in-out infinite;
+	}
+	
+	.social-icons li a i.fa-twitter{
+	color: #6678E8;
+	}
+	
+	.social-icons li a i.fa-instagram{
+	   color: #fb3958;
+	}
+	#social-icons {
+	padding:0;
+	position: fixed;
+	top: 50%;
+	transform: translateY(-50%);
+	right:0;
+	z-index: 200;
+	}
+	.social-icons {
+	margin:0;
+	padding:0;
+	list-style:none;
+	
+	}
+	.social-icons li {
+	display: block;
+	margin: 1px 0px;
+	}
+	.social-icons li a {
+	width: 60px;
+	height:60px;
+	display:inline-block;
+	line-height:40px;
+	text-align:center;
+/*	background: rgba(255, 255, 255, 0.1);
+	color: rgba(255,255,255,1);*/
+	font-size:18px;
+	}
+	
+
   
